extends Control

#create actionbuttonnode

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
	$MarginContainer/VBoxContainer/FightButton.grab_focus()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_fight_button_pressed():
	pass # Replace with function body.


func _on_team_button_pressed():
	pass # Replace with function body.


func _on_item_button_pressed():
	pass # Replace with function body.


func _on_run_button_pressed():
	pass # Replace with function body.
